[package]
name = "egui-sdl3-platform"
version = "0.2.1"
edition = "2021"
authors = ["cohaereo <cohae@cohae.dev>", "ErikWDev <ErikWDev@gmail.com>"]
description = "SDL3 platform integration for egui"
homepage = "https://github.com/cohaereo/egui-sdl3-platform"
repository = "https://github.com/cohaereo/egui-sdl3-platform"
license = "MIT"
readme = "README.md"
categories = ["graphics", "game-development", "gui"]
keywords = ["egui", "sdl3", "sdl", "gui", "platform"]
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
egui = "0.33"
log = "0"
sdl3 = "0"
thiserror = "2"
